@@ -37,9 +37,9 @@ import de.ukbonn.mwtek.dashboardlogic.models.DiseaseDataItem;
 import de.ukbonn.mwtek.dashboardlogic.settings.InputCodeSettings;
 import de.ukbonn.mwtek.dashboardlogic.tools.EncounterFilter;
 import de.ukbonn.mwtek.dashboardlogic.tools.LocationFilter;
-import de.ukbonn.mwtek.utilities.fhir.resources.UkbEncounter;
-import de.ukbonn.mwtek.utilities.fhir.resources.UkbLocation;
-import de.ukbonn.mwtek.utilities.fhir.resources.UkbProcedure;
+import de.ukbonn.mwtek.utilities.fhir.resources.MiiEncounter;
+import de.ukbonn.mwtek.utilities.fhir.resources.MiiLocation;
+import de.ukbonn.mwtek.utilities.fhir.resources.MiiProcedure;
 import de.ukbonn.mwtek.utilities.generic.time.DateTools;
 import de.ukbonn.mwtek.utilities.generic.time.TimerTools;
 import java.time.Instant;
@@ -48,7 +48,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -81,17 +80,17 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
    */
   public static Map<TreatmentLevels, Map<Long, Set<String>>> createMaxTreatmentTimeline(
       DataItemContext dataItemContext,
-      List<UkbEncounter> facilityEncounters,
-      List<UkbEncounter> supplyContactEncounters,
-      List<UkbProcedure> icuProcedures,
-      List<UkbLocation> locations,
+      List<MiiEncounter> facilityEncounters,
+      List<MiiEncounter> supplyContactEncounters,
+      List<MiiProcedure> icuProcedures,
+      List<MiiLocation> locations,
       InputCodeSettings inputCodeSettings,
-      Boolean useIcuUndiff) {
+      boolean useIcuUndiff) {
     log.debug("started createMaxTreatmentTimeline");
     Instant startTimer = TimerTools.startTimer();
 
     // Map containing Lists with number of cases, sorted by their treatmentlevel, and a set of
-    // caseNrs for each Day
+    // caseIds for each day
     Map<TreatmentLevels, Map<Long, Set<String>>> resultWithCaseNrsMap = new LinkedHashMap<>();
     // Map containing a set of case Ids for each day
     Map<Long, Set<String>> mapAmbulantCaseNr = Collections.synchronizedMap(new LinkedHashMap<>());
@@ -101,17 +100,17 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
     Map<Long, Set<String>> mapIcuVentCaseNrs = Collections.synchronizedMap(new LinkedHashMap<>());
     Map<Long, Set<String>> mapIcuEcmoCaseNrs = Collections.synchronizedMap(new LinkedHashMap<>());
     Map<Long, Set<String>> mapIcuUndiffCaseNrs = Collections.synchronizedMap(new LinkedHashMap<>());
-    // used to save the maxtreatmentlevel up to the checked date
-    Map<TreatmentLevels, Set<String>> prevMaxTreatmentLevels = new ConcurrentHashMap<>();
+    // used to save the max treatment level per case up to the checked date
+    Map<TreatmentLevels, Set<String>> prevMaxTreatmentlevelByCaseId = new ConcurrentHashMap<>();
 
-    prevMaxTreatmentLevels.put(OUTPATIENT, ConcurrentHashMap.newKeySet());
-    prevMaxTreatmentLevels.put(NORMAL_WARD, ConcurrentHashMap.newKeySet());
+    prevMaxTreatmentlevelByCaseId.put(OUTPATIENT, ConcurrentHashMap.newKeySet());
+    prevMaxTreatmentlevelByCaseId.put(NORMAL_WARD, ConcurrentHashMap.newKeySet());
     if (useIcuUndiff) {
-      prevMaxTreatmentLevels.put(ICU_UNDIFF, ConcurrentHashMap.newKeySet());
+      prevMaxTreatmentlevelByCaseId.put(ICU_UNDIFF, ConcurrentHashMap.newKeySet());
     } else {
-      prevMaxTreatmentLevels.put(ICU, ConcurrentHashMap.newKeySet());
-      prevMaxTreatmentLevels.put(ICU_VENTILATION, ConcurrentHashMap.newKeySet());
-      prevMaxTreatmentLevels.put(ICU_ECMO, ConcurrentHashMap.newKeySet());
+      prevMaxTreatmentlevelByCaseId.put(ICU, ConcurrentHashMap.newKeySet());
+      prevMaxTreatmentlevelByCaseId.put(ICU_VENTILATION, ConcurrentHashMap.newKeySet());
+      prevMaxTreatmentlevelByCaseId.put(ICU_ECMO, ConcurrentHashMap.newKeySet());
     }
     // Determination of the location IDs of all intensive care units. Only the wards are
     // considered, since in the location components within an Encounter resource, at best
@@ -121,15 +120,15 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
 
     // Since kds case module profile 2024 the pre-stationary and post-stationary will now be
     // handled as outpatient cases with Encounter.class = AMB
-    Set<UkbEncounter> positiveSupplyContactEncounters =
+    Set<MiiEncounter> positiveSupplyContactEncounters =
         supplyContactEncounters.parallelStream()
             .filter(EncounterFilter::isDiseasePositive)
-            .filter(UkbEncounter::isCaseClassInpatientOrShortStay)
+            .filter(MiiEncounter::isCaseClassInpatientOrShortStay)
             .collect(Collectors.toSet());
 
-    List<UkbEncounter> positiveOutpatientEncounters =
+    List<MiiEncounter> positiveOutpatientEncounters =
         facilityEncounters.parallelStream()
-            .filter(UkbEncounter::isCaseClassOutpatient)
+            .filter(MiiEncounter::isCaseClassOutpatient)
             .filter(EncounterFilter::isDiseasePositive)
             .toList();
 
@@ -140,6 +139,7 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
     // Storing the highest treatmentlevel undiff since its simpler to handle
     Map<String, TreatmentLevels> highestTreatmentLevelUndiff = new HashMap<>();
 
+    Map<String, ReentrantLock> locks = new ConcurrentHashMap<>();
     while (currentDate <= currentDayUnix) {
       long checkDate = currentDate;
       mapAmbulantCaseNr.put(checkDate, ConcurrentHashMap.newKeySet());
@@ -151,8 +151,6 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
         mapIcuVentCaseNrs.put(checkDate, ConcurrentHashMap.newKeySet());
         mapIcuEcmoCaseNrs.put(checkDate, ConcurrentHashMap.newKeySet());
       }
-
-      Map<String, ReentrantLock> locks = new ConcurrentHashMap<>();
       // Pre-filtering the encounters to ones that can have intersection with the date that is
       // currently checked
       try {
@@ -170,17 +168,15 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
                 })
             .forEach(
                 supplyContactEncounter -> {
-                  //              String encounterId = supplyContactEncounter.getId();
-                  String patientId = supplyContactEncounter.getPatientId();
                   // Since a case should just count once a day and the procedure usually references
                   // the facility contact, we need to look via top level resource
                   String facilityContactId = supplyContactEncounter.getFacilityContactId();
-
                   long caseStartUnix =
                       DateTools.dateToUnixTime(supplyContactEncounter.getPeriod().getStart());
 
                   // Prevent multiple cases of a patient from being processed at the same time
-                  ReentrantLock lock = locks.computeIfAbsent(patientId, k -> new ReentrantLock());
+                  ReentrantLock lock =
+                      locks.computeIfAbsent(facilityContactId, _ -> new ReentrantLock());
                   lock.lock();
                   boolean isNormalWard;
                   boolean isIcuUndiff = false;
@@ -188,49 +184,52 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
                   boolean isVent = false;
                   boolean isEcmo = false;
                   try {
-                    isNormalWard = prevMaxTreatmentLevels.get(NORMAL_WARD).contains(patientId);
-                    if (useIcuUndiff)
-                      isIcuUndiff = prevMaxTreatmentLevels.get(ICU_UNDIFF).contains(patientId);
-                    else {
-                      isIcu = prevMaxTreatmentLevels.get(ICU).contains(patientId);
-                      isVent = prevMaxTreatmentLevels.get(ICU_VENTILATION).contains(patientId);
-                      isEcmo = prevMaxTreatmentLevels.get(ICU_ECMO).contains(patientId);
+                    isNormalWard =
+                        prevMaxTreatmentlevelByCaseId.get(NORMAL_WARD).contains(facilityContactId);
+                    if (useIcuUndiff) {
+                      isIcuUndiff =
+                          prevMaxTreatmentlevelByCaseId.get(ICU_UNDIFF).contains(facilityContactId);
+                    } else {
+                      isIcu = prevMaxTreatmentlevelByCaseId.get(ICU).contains(facilityContactId);
+                      isVent =
+                          prevMaxTreatmentlevelByCaseId
+                              .get(ICU_VENTILATION)
+                              .contains(facilityContactId);
+                      isEcmo =
+                          prevMaxTreatmentlevelByCaseId.get(ICU_ECMO).contains(facilityContactId);
                     }
                     // if the case is ambulant, check the pids of the previous maxtreatmentlevels
                     // and if none are similar with the current case than note the case as ambulant
                     if (supplyContactEncounter.isCaseClassOutpatient()) {
-                      Map<TreatmentLevels, List<String>> mapMaxPidCheck = new HashMap<>();
-                      mapMaxPidCheck.put(NORMAL_WARD, new ArrayList<>());
-                      mapMaxPidCheck.put(ICU, new ArrayList<>());
-                      mapMaxPidCheck.put(ICU_VENTILATION, new ArrayList<>());
-                      mapMaxPidCheck.put(ICU_ECMO, new ArrayList<>());
-                      mapMaxPidCheck.put(ICU_UNDIFF, new ArrayList<>());
+                      Map<TreatmentLevels, List<String>> mapMaxCaseCheck = new HashMap<>();
+                      mapMaxCaseCheck.put(NORMAL_WARD, new ArrayList<>());
+                      mapMaxCaseCheck.put(ICU, new ArrayList<>());
+                      mapMaxCaseCheck.put(ICU_VENTILATION, new ArrayList<>());
+                      mapMaxCaseCheck.put(ICU_ECMO, new ArrayList<>());
+                      mapMaxCaseCheck.put(ICU_UNDIFF, new ArrayList<>());
                       // Normal ward
-                      if (isNormalWard) mapMaxPidCheck.get(NORMAL_WARD).add(patientId);
-                      if (isIcu) mapMaxPidCheck.get(ICU).add(patientId);
-                      if (isVent) mapMaxPidCheck.get(ICU_VENTILATION).add(patientId);
-                      if (isEcmo) mapMaxPidCheck.get(ICU_ECMO).add(patientId);
-                      if (isIcuUndiff) mapMaxPidCheck.get(ICU_UNDIFF).add(patientId);
+                      if (isNormalWard) mapMaxCaseCheck.get(NORMAL_WARD).add(facilityContactId);
+                      if (isIcu) mapMaxCaseCheck.get(ICU).add(facilityContactId);
+                      if (isVent) mapMaxCaseCheck.get(ICU_VENTILATION).add(facilityContactId);
+                      if (isEcmo) mapMaxCaseCheck.get(ICU_ECMO).add(facilityContactId);
+                      if (isIcuUndiff) mapMaxCaseCheck.get(ICU_UNDIFF).add(facilityContactId);
 
                       // list containing every supplyContactEncounter with a currently higher
                       // treatmentlevel than 'outpatient'.
                       Set<String> listHigherTreatment =
-                          mapMaxPidCheck.values().stream()
+                          mapMaxCaseCheck.values().stream()
                               .flatMap(List::stream)
                               .collect(Collectors.toCollection(LinkedHashSet::new));
-                      // Exit early if the patient has a higher treatment level than outpatient
+                      // Exit early if the case has a higher treatment level than outpatient
                       if (!listHigherTreatment.isEmpty()) {
                         return;
                       }
                       // Check if the case falls within the same day as checkDate
                       if (caseStartUnix >= checkDate
                           && caseStartUnix < checkDate + DAY_IN_SECONDS) {
-                        mapAmbulantCaseNr
-                            .computeIfAbsent(checkDate, k -> new HashSet<>())
-                            .add(facilityContactId);
-                        prevMaxTreatmentLevels
-                            .computeIfAbsent(OUTPATIENT, k -> new HashSet<>())
-                            .add(patientId);
+                        addCaseToTimeline(mapAmbulantCaseNr, checkDate, facilityContactId);
+                        markPreviousMaxLevel(
+                            prevMaxTreatmentlevelByCaseId, OUTPATIENT, facilityContactId);
                       }
                     }
                     // At this stage it is clear that it is a stationary supplyContactEncounter
@@ -243,12 +242,11 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
                           caseStartUnix,
                           checkDate,
                           icuLocationIds,
-                          prevMaxTreatmentLevels,
+                          prevMaxTreatmentlevelByCaseId,
                           mapNormalWardCaseNrs,
                           mapIcuUndiffCaseNrs,
                           highestTreatmentLevelUndiff,
                           facilityContactId,
-                          patientId,
                           isIcu,
                           isVent,
                           isEcmo,
@@ -282,19 +280,18 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
   }
 
   private static void handleInpatientEncounter(
-      List<UkbProcedure> icuProcedures,
+      List<MiiProcedure> icuProcedures,
       InputCodeSettings inputCodeSettings,
       Boolean useIcuUndiff,
-      UkbEncounter supplyContactEncounter,
+      MiiEncounter supplyContactEncounter,
       long caseStartUnix,
       long checkDate,
       Set<String> icuLocationIds,
-      Map<TreatmentLevels, Set<String>> previousMaxTreatmentLevels,
+      Map<TreatmentLevels, Set<String>> prevMaxTreatmentlevelByCaseId,
       Map<Long, Set<String>> mapNormalWardCaseNrs,
       Map<Long, Set<String>> mapIcuUndiffCaseNrs,
       Map<String, TreatmentLevels> highestTreatmentLevelUndiff,
       String facilityContactId,
-      String patientId,
       boolean isIcu,
       boolean isVent,
       boolean isEcmo,
@@ -325,23 +322,21 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
             supplyContactEncounter,
             encounterIcuLocations,
             checkDate,
-            previousMaxTreatmentLevels,
+            prevMaxTreatmentlevelByCaseId,
             mapNormalWardCaseNrs,
             mapIcuUndiffCaseNrs,
             highestTreatmentLevelUndiff,
-            facilityContactId,
-            patientId);
+            facilityContactId);
       } else {
-
         // No icu related treatmentlevel for this case -> normal ward
         if (!isIcu && !isVent && !isEcmo) {
           // if the case contains no icu locations
           if (encounterIcuLocations.isEmpty()) {
-            mapNormalWardCaseNrs.get(checkDate).add(facilityContactId);
-            previousMaxTreatmentLevels.get(NORMAL_WARD).add(patientId);
+            addCaseToTimeline(mapNormalWardCaseNrs, checkDate, facilityContactId);
+            markPreviousMaxLevel(prevMaxTreatmentlevelByCaseId, NORMAL_WARD, facilityContactId);
           } else {
             // check if there are any icu procedures currently going on
-            List<UkbProcedure> listEncounterIcuProcedure =
+            List<MiiProcedure> listEncounterIcuProcedure =
                 icuProcedures.stream()
                     .filter(icu -> facilityContactId.equals(icu.getCaseId()))
                     .toList();
@@ -352,10 +347,9 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
                   encounterIcuLocations,
                   supplyContactEncounter,
                   checkDate,
-                  previousMaxTreatmentLevels,
+                  prevMaxTreatmentlevelByCaseId,
                   mapNormalWardCaseNrs,
-                  mapIcuCaseNrs,
-                  false);
+                  mapIcuCaseNrs);
             } else {
               // check and sort if it is a ventilation or ecmo case
               sortToVentOrEcmoTimeline(
@@ -369,21 +363,21 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
                   mapIcuCaseNrs,
                   mapIcuVentCaseNrs,
                   mapIcuEcmoCaseNrs,
-                  previousMaxTreatmentLevels,
+                  prevMaxTreatmentlevelByCaseId,
                   inputCodeSettings);
             }
           }
         }
         // if an ICU case was found
         else if (isIcu && !isVent && !isEcmo) {
-          List<UkbProcedure> listEncounterIcuProcedure =
+          List<MiiProcedure> listEncounterIcuProcedure =
               icuProcedures.stream()
                   .filter(icu -> facilityContactId.equals(icu.getCaseId()))
                   .collect(Collectors.toList());
 
           if (listEncounterIcuProcedure.isEmpty()) {
-            mapIcuCaseNrs.get(checkDate).add(facilityContactId);
-            previousMaxTreatmentLevels.get(ICU).add(patientId);
+            addCaseToTimeline(mapIcuCaseNrs, checkDate, facilityContactId);
+            markPreviousMaxLevel(prevMaxTreatmentlevelByCaseId, ICU, facilityContactId);
           } else {
             sortToVentOrEcmoTimeline(
                 supplyContactEncounter,
@@ -396,13 +390,13 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
                 mapIcuCaseNrs,
                 mapIcuVentCaseNrs,
                 mapIcuEcmoCaseNrs,
-                previousMaxTreatmentLevels,
+                prevMaxTreatmentlevelByCaseId,
                 inputCodeSettings);
           }
         }
         // if a ventilation case was found
         else if (isVent && !isEcmo) {
-          List<UkbProcedure> icuProceduresEncounter =
+          List<MiiProcedure> icuProceduresEncounter =
               icuProcedures.stream()
                   .filter(icu -> facilityContactId.equals(icu.getCaseId()))
                   .toList();
@@ -417,20 +411,45 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
               mapIcuCaseNrs,
               mapIcuVentCaseNrs,
               mapIcuEcmoCaseNrs,
-              previousMaxTreatmentLevels,
+              prevMaxTreatmentlevelByCaseId,
               inputCodeSettings);
         }
         // if an ecmo case was found
         else {
-          mapIcuEcmoCaseNrs.get(checkDate).add(facilityContactId);
-          previousMaxTreatmentLevels.get(ICU_ECMO).add(patientId);
+          addCaseToTimeline(mapIcuEcmoCaseNrs, checkDate, facilityContactId);
+          markPreviousMaxLevel(prevMaxTreatmentlevelByCaseId, ICU_ECMO, facilityContactId);
         }
       }
     } // if date check
   }
 
+  private static boolean isEncounterOnIcuAtDate(
+      List<Encounter.EncounterLocationComponent> encountersWithIcuLocation,
+      MiiEncounter supplyContactEncounter,
+      Long checkedDate) {
+
+    for (Encounter.EncounterLocationComponent location : encountersWithIcuLocation) {
+      Period period = getValidPeriod(location, supplyContactEncounter);
+
+      if (period == null || !period.hasStart()) {
+        logNoValidPeriodFound(supplyContactEncounter);
+        continue;
+      }
+      if (!period.hasEnd()) {
+        period.setEnd(DateTools.getCurrentDateTime());
+      }
+      long locationDateStartUnix = DateTools.dateToUnixTime(period.getStart());
+      long locationDateEndUnix = DateTools.dateToUnixTime(period.getEnd());
+      // check overlap with day
+      if (locationDateStartUnix < checkedDate && locationDateEndUnix >= checkedDate) {
+        return true;
+      }
+    }
+    return false;
+  }
+
   private static List<EncounterLocationComponent> getListIcuEncounterLocationComponents(
-      UkbEncounter supplyContactEncounter, Set<String> icuLocationIds) {
+      MiiEncounter supplyContactEncounter, Set<String> icuLocationIds) {
     return supplyContactEncounter.getLocation().stream()
         .filter(DiseaseResultFunctionality::isLocationReferenceExisting)
         .filter(location -> icuLocationIds.contains(extractIdFromReference(location.getLocation())))
@@ -438,47 +457,39 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
   }
 
   private static void handleIcuUndiff(
-      UkbEncounter supplyContactEncounter,
+      MiiEncounter supplyContactEncounter,
       List<EncounterLocationComponent> listEncounterHasIcuLocation,
       long checkDate,
-      Map<TreatmentLevels, Set<String>> previousMaxTreatmentLevels,
+      Map<TreatmentLevels, Set<String>> prevMaxTreatmentLevelsByCase,
       Map<Long, Set<String>> mapNormalWardCaseNrs,
       Map<Long, Set<String>> mapIcuUndiffCaseNrs,
       Map<String, TreatmentLevels> highestTreatmentLevelUndiff,
-      String facilityContactId,
-      String patientId) {
-    boolean encounterOnIcu =
-        encounterStationTypeCheckProcess(
-            listEncounterHasIcuLocation,
-            supplyContactEncounter,
-            checkDate,
-            previousMaxTreatmentLevels,
-            mapNormalWardCaseNrs,
-            mapIcuUndiffCaseNrs,
-            true);
+      String facilityContactId) {
 
-    if (highestTreatmentLevelUndiff
-        .getOrDefault(facilityContactId, NORMAL_WARD)
-        .equals(ICU_UNDIFF)) {
-      mapIcuUndiffCaseNrs.get(checkDate).add(facilityContactId);
-      previousMaxTreatmentLevels.get(ICU_UNDIFF).add(patientId);
-    }
-    // Check if encounter is on icu this date
-    else if (encounterOnIcu) {
-      // Add patient to the icu_undiff map since its first time
-      mapIcuUndiffCaseNrs.get(checkDate).add(facilityContactId);
-      previousMaxTreatmentLevels.get(ICU_UNDIFF).add(patientId);
+    boolean encounterOnIcu =
+        isEncounterOnIcuAtDate(listEncounterHasIcuLocation, supplyContactEncounter, checkDate);
+    // ensure exclusive assignment
+    mapNormalWardCaseNrs
+        .computeIfAbsent(checkDate, _ -> ConcurrentHashMap.newKeySet())
+        .remove(facilityContactId);
+    mapIcuUndiffCaseNrs
+        .computeIfAbsent(checkDate, _ -> ConcurrentHashMap.newKeySet())
+        .remove(facilityContactId);
+    // keep the highest level once reached
+    if (highestTreatmentLevelUndiff.getOrDefault(facilityContactId, NORMAL_WARD).equals(ICU_UNDIFF)
+        || encounterOnIcu) {
+      addCaseToTimeline(mapIcuUndiffCaseNrs, checkDate, facilityContactId);
+      markPreviousMaxLevel(prevMaxTreatmentLevelsByCase, ICU_UNDIFF, facilityContactId);
       highestTreatmentLevelUndiff.put(facilityContactId, ICU_UNDIFF);
     } else {
-      // If the patient is not on ICU and not already was → Normal Ward
-      mapNormalWardCaseNrs.get(checkDate).add(facilityContactId);
-      previousMaxTreatmentLevels.get(NORMAL_WARD).add(patientId);
+      addCaseToTimeline(mapNormalWardCaseNrs, checkDate, facilityContactId);
+      markPreviousMaxLevel(prevMaxTreatmentLevelsByCase, NORMAL_WARD, facilityContactId);
       highestTreatmentLevelUndiff.putIfAbsent(facilityContactId, NORMAL_WARD);
     }
   }
 
   private static void logVentEcmoNotOnIcu(
-      List<UkbEncounter> supplyContactEncounters,
+      List<MiiEncounter> supplyContactEncounters,
       Set<String> icuLocationIds,
       Map<Long, Set<String>> mapIcuVentCaseNrs,
       Map<Long, Set<String>> mapIcuEcmoCaseNrs) {
@@ -490,7 +501,7 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
                 location ->
                     icuLocationIds.contains(
                         extractIdFromReference(location.getLocationFirstRep().getLocation())))
-            .map(UkbEncounter::getFacilityContactId)
+            .map(MiiEncounter::getFacilityContactId)
             .collect(Collectors.toSet());
 
     // Precompute ICU case sets for fast lookup
@@ -503,7 +514,7 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
     // Filter encounters that are not in ICU location but exist in one of the case sets
     List<String> results =
         supplyContactEncounters.parallelStream()
-            .map(UkbEncounter::getFacilityContactId)
+            .map(MiiEncounter::getFacilityContactId)
             .filter(id -> !encountersWithIcu.contains(id))
             .filter(id -> ventCaseSet.contains(id) || ecmoCaseSet.contains(id))
             .toList();
@@ -511,13 +522,13 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
       log.debug(
           "{} encounter with vent/ecmo but no icu linkage. Example: {}",
           results.size(),
-          results.get(0));
+          results.getFirst());
   }
 
   /**
-   * Adds the current {@link UkbEncounter} to a list if he has had artificial respiration or ECMO
+   * Adds the current {@link MiiEncounter} to a list if he has had artificial respiration or ECMO
    *
-   * @param listEncounterIcuProcedures The {@link UkbProcedure} resources, which include information
+   * @param listEncounterIcuProcedures The {@link MiiProcedure} resources, which include information
    *     about ECMO / artificial ventilation periods.
    * @param listEncounterHasIcuLocation List containing all icu locations of an encounter.
    * @param isVent Check if the encounter has any ventilation-related resources attached to it.
@@ -530,75 +541,54 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
    *     the date.
    * @param mapIcuEcmoCaseNrs A map that contains the case ids of every ecmo case, sorted by the
    *     date.
-   * @param previousMaxTreatmentLevels A map with the previous maxtreatmentlevel of an encounter.
+   * @param prevMaxTreatmentLevelsByCaseId A map with the previous maxtreatmentlevel of an
+   *     encounter.
    */
   private static void sortToVentOrEcmoTimeline(
-      UkbEncounter supplyContactEncounter,
-      List<UkbProcedure> listEncounterIcuProcedures,
+      MiiEncounter supplyContactEncounter,
+      List<MiiProcedure> listEncounterIcuProcedures,
       List<EncounterLocationComponent> listEncounterHasIcuLocation,
-      Boolean isVent,
-      Boolean isEcmo,
+      boolean isVent,
+      boolean isEcmo,
       Long checkedDate,
       Map<Long, Set<String>> mapNormalWardCaseNrs,
       Map<Long, Set<String>> mapIcuCaseNrs,
       Map<Long, Set<String>> mapIcuVentCaseNrs,
       Map<Long, Set<String>> mapIcuEcmoCaseNrs,
-      Map<TreatmentLevels, Set<String>> previousMaxTreatmentLevels,
+      Map<TreatmentLevels, Set<String>> prevMaxTreatmentLevelsByCaseId,
       InputCodeSettings inputCodeSettings) {
-    for (UkbProcedure procedure : listEncounterIcuProcedures) {
+    String caseId = supplyContactEncounter.getFacilityContactId();
+
+    for (MiiProcedure procedure : listEncounterIcuProcedures) {
       try {
         Period procedurePeriod = procedure.getPerformedPeriod();
         if (!procedurePeriod.hasEnd()) {
           procedurePeriod.setEnd(DateTools.getCurrentDateTime());
         }
+
         long procedureStartUnix = DateTools.dateToUnixTime(procedurePeriod.getStart());
         long procedureEndUnix = DateTools.dateToUnixTime(procedurePeriod.getEnd());
+
+        // check if the procedure fits into the checked time span
         if (procedure.hasCode() && procedure.getCode().hasCoding()) {
           String procedureCode = getCodeOfFirstCoding(procedure.getCode().getCoding());
-          // check if the procedure fits into the checked time span
-          if (procedureStartUnix < checkedDate && procedureEndUnix >= checkedDate) {
-            isVent =
-                isVent(
-                    previousMaxTreatmentLevels,
-                    mapIcuVentCaseNrs,
-                    procedureCode,
-                    supplyContactEncounter.getFacilityContactId(),
-                    supplyContactEncounter.getPatientId(),
-                    checkedDate,
-                    inputCodeSettings);
-            isEcmo =
-                isEcmo(
-                    previousMaxTreatmentLevels,
-                    mapIcuEcmoCaseNrs,
-                    procedureCode,
-                    supplyContactEncounter.getFacilityContactId(),
-                    supplyContactEncounter.getPatientId(),
-                    checkedDate,
-                    inputCodeSettings);
-          }
+
+          boolean procedureMatchesCheckedDate =
+              procedureStartUnix < checkedDate && procedureEndUnix >= checkedDate;
+
+          boolean procedureEndedWithinPreviousDay =
+              procedureEndUnix < checkedDate
+                  && procedureEndUnix >= (checkedDate - DAY_IN_SECONDS)
+                  && checkedDate - procedureEndUnix < DAY_IN_SECONDS;
+
           // check if the end date of the procedure fits into the checked time span
-          else if (procedureEndUnix < checkedDate
-              && procedureEndUnix >= (checkedDate - DAY_IN_SECONDS)) {
-            long difference = checkedDate - procedureEndUnix;
-            if (difference < DAY_IN_SECONDS) {
-              isVent =
-                  isVent(
-                      previousMaxTreatmentLevels,
-                      mapIcuVentCaseNrs,
-                      procedureCode,
-                      supplyContactEncounter.getFacilityContactId(),
-                      supplyContactEncounter.getPatientId(),
-                      checkedDate,
-                      inputCodeSettings);
-              isEcmo =
-                  isEcmo(
-                      previousMaxTreatmentLevels,
-                      mapIcuEcmoCaseNrs,
-                      procedureCode,
-                      supplyContactEncounter.getFacilityContactId(),
-                      supplyContactEncounter.getPatientId(),
-                      checkedDate,
-                      inputCodeSettings);
+          if (procedureMatchesCheckedDate || procedureEndedWithinPreviousDay) {
+            if (inputCodeSettings.getProcedureVentilationCodes().contains(procedureCode)) {
+              isVent = true;
+            }
+
+            if (inputCodeSettings.getProcedureEcmoCodes().contains(procedureCode)) {
+              isEcmo = true;
             }
           }
         }
@@ -609,22 +599,37 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
             ex.getMessage());
       }
     }
-    // check if the case was added, into the map containing the previous maxtreatmentlevels
-    if (!isVent && !isEcmo) {
-      // if neither ecmo nor vent was found, then check if case is icu or stationary again
+
+    // Assign only the highest treatment level for this case and day.
+    if (isEcmo) {
+      removeCaseFromTimeline(mapNormalWardCaseNrs, checkedDate, caseId);
+      removeCaseFromTimeline(mapIcuCaseNrs, checkedDate, caseId);
+      removeCaseFromTimeline(mapIcuVentCaseNrs, checkedDate, caseId);
+
+      addCaseToTimeline(mapIcuEcmoCaseNrs, checkedDate, caseId);
+      markPreviousMaxLevel(prevMaxTreatmentLevelsByCaseId, ICU_ECMO, caseId);
+
+    } else if (isVent) {
+      removeCaseFromTimeline(mapNormalWardCaseNrs, checkedDate, caseId);
+      removeCaseFromTimeline(mapIcuCaseNrs, checkedDate, caseId);
+
+      addCaseToTimeline(mapIcuVentCaseNrs, checkedDate, caseId);
+      markPreviousMaxLevel(prevMaxTreatmentLevelsByCaseId, ICU_VENTILATION, caseId);
+
+    } else {
       encounterStationTypeCheckProcess(
           listEncounterHasIcuLocation,
           supplyContactEncounter,
           checkedDate,
-          previousMaxTreatmentLevels,
+          prevMaxTreatmentLevelsByCaseId,
           mapNormalWardCaseNrs,
           mapIcuCaseNrs);
-    } else if (!isEcmo) {
-      // purpose is to make sure that the maxtreatmentlevels of the case is still marked correctly,
-      // even though the time check does not apply anymore.
-      mapIcuVentCaseNrs.get(checkedDate).add(supplyContactEncounter.getFacilityContactId());
-      previousMaxTreatmentLevels.get(ICU_VENTILATION).add(supplyContactEncounter.getPatientId());
     }
+  }
+
+  private static void removeCaseFromTimeline(
+      Map<Long, Set<String>> timeline, long checkDate, String caseId) {
+    timeline.computeIfAbsent(checkDate, _ -> ConcurrentHashMap.newKeySet()).remove(caseId);
   }
 
   /**
@@ -633,96 +638,30 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
    *
    * @param encountersWithIcuLocation Icu locations of an supplyContactEncounter
    * @param checkedDate The current date that is being checked
-   * @param previousMaxTreatmentLevels Map containing all previous maxtreatmentlevels up to the
+   * @param prevMaxTreatmentLevelByCaseId Map containing all previous maxtreatmentlevels up to the
    *     checked date
    * @param mapStationaryCaseNrs Map containing all case ids of stationary cases, sorted by the date
    * @param mapIcuCaseNrs Map containing all case ids of ICU cases, sorted by the date
    */
   private static void encounterStationTypeCheckProcess(
       List<Encounter.EncounterLocationComponent> encountersWithIcuLocation,
-      UkbEncounter supplyContactEncounter,
+      MiiEncounter supplyContactEncounter,
       Long checkedDate,
-      Map<TreatmentLevels, Set<String>> previousMaxTreatmentLevels,
+      Map<TreatmentLevels, Set<String>> prevMaxTreatmentLevelByCaseId,
       Map<Long, Set<String>> mapStationaryCaseNrs,
       Map<Long, Set<String>> mapIcuCaseNrs) {
-    boolean isInIcu = false;
 
-    // iterate through the icu locations
+    boolean isInIcu = false;
+    String facilityContactId = supplyContactEncounter.getFacilityContactId();
+
     for (Encounter.EncounterLocationComponent location : encountersWithIcuLocation) {
       Period period = getValidPeriod(location, supplyContactEncounter);
 
-      // If there is no valid start date, skip this location
       if (period == null || !period.hasStart()) {
-        log.warn("No valid period start found for Encounter: {}", supplyContactEncounter.getId());
-        continue;
-      }
-      // Ensure period.end is set (fallback to current date if missing)
-      if (!period.hasEnd()) {
-        period.setEnd(DateTools.getCurrentDateTime());
-      }
-
-      long locationDateStartUnix = DateTools.dateToUnixTime(period.getStart());
-      long locationDateEndUnix = DateTools.dateToUnixTime(period.getEnd());
-      // check if checkedDate fits into the time span of the icu location
-      if (locationDateStartUnix < checkedDate && locationDateEndUnix >= checkedDate) {
-        isInIcu = true;
-        break;
-      }
-    }
-    // If not currently in ICU, assign to normal ward
-    if (isInIcu) {
-      mapIcuCaseNrs
-          .computeIfAbsent(checkedDate, k -> new HashSet<>())
-          .add(supplyContactEncounter.getFacilityContactId());
-      previousMaxTreatmentLevels
-          .computeIfAbsent(TreatmentLevels.ICU, k -> new HashSet<>())
-          .add(supplyContactEncounter.getPatientId());
-    } else {
-      mapStationaryCaseNrs
-          .computeIfAbsent(checkedDate, k -> new HashSet<>())
-          .add(supplyContactEncounter.getFacilityContactId());
-      previousMaxTreatmentLevels
-          .computeIfAbsent(TreatmentLevels.NORMAL_WARD, k -> new HashSet<>())
-          .add(supplyContactEncounter.getPatientId());
-    }
-  }
-
-  /**
-   * Determines whether a supplyContactEncounter should be categorized as ICU, ICU_UNDIFFERENTIATED,
-   * or a stationary (normal ward) case.
-   *
-   * @param encountersWithIcuLocation ICU locations of a supplyContactEncounter
-   * @param supplyContactEncounter The encounter being evaluated
-   * @param checkedDate The current date being checked
-   * @param previousMaxTreatmentLevels Map containing all previous max treatment levels up to the
-   *     checked date
-   * @param mapStationaryCaseNrs Map containing all case IDs of stationary cases, sorted by date
-   * @param mapIcuCaseNrs Map containing all case IDs of ICU (UNDIFF) cases, sorted by date
-   * @param useIcuUndiff Boolean flag indicating if ICU_UNDIFFERENTIATED should be used
-   * @return true if an ICU (including ICU_UNDIFFERENTIATED) assignment was made, false otherwise
-   */
-  private static boolean encounterStationTypeCheckProcess(
-      List<Encounter.EncounterLocationComponent> encountersWithIcuLocation,
-      UkbEncounter supplyContactEncounter,
-      Long checkedDate,
-      Map<TreatmentLevels, Set<String>> previousMaxTreatmentLevels,
-      Map<Long, Set<String>> mapStationaryCaseNrs,
-      Map<Long, Set<String>> mapIcuCaseNrs,
-      boolean useIcuUndiff) {
-
-    boolean isInIcu = false;
-
-    // Iterate through ICU locations
-    for (Encounter.EncounterLocationComponent location : encountersWithIcuLocation) {
-      Period period = getValidPeriod(location, supplyContactEncounter);
-
-      // Skip location if no valid period is found
-      if (period == null || !period.hasStart()) {
-        log.warn("No valid period start found for Encounter: {}", supplyContactEncounter.getId());
+        logNoValidPeriodFound(supplyContactEncounter);
         continue;
       }
 
-      // Ensure period.end is set (fallback to current date if missing)
       if (!period.hasEnd()) {
         period.setEnd(DateTools.getCurrentDateTime());
       }
@@ -730,121 +669,41 @@ public class TimelineMaxTreatmentLevel extends DashboardDataItemLogic
       long locationDateStartUnix = DateTools.dateToUnixTime(period.getStart());
       long locationDateEndUnix = DateTools.dateToUnixTime(period.getEnd());
 
-      // Check if checkedDate fits into the time span of the ICU location
       if (locationDateStartUnix < checkedDate && locationDateEndUnix >= checkedDate) {
         isInIcu = true;
         break;
       }
     }
 
-    // Assign ICU or Normal Ward based on ICU presence
     if (isInIcu) {
-      mapIcuCaseNrs
-          .computeIfAbsent(checkedDate, k -> new HashSet<>())
-          .add(supplyContactEncounter.getFacilityContactId());
-      if (useIcuUndiff) {
-        previousMaxTreatmentLevels
-            .computeIfAbsent(ICU_UNDIFF, k -> new HashSet<>())
-            .add(supplyContactEncounter.getPatientId());
-      } else {
-        previousMaxTreatmentLevels
-            .computeIfAbsent(ICU, k -> new HashSet<>())
-            .add(supplyContactEncounter.getPatientId());
-      }
-      return true; // ICU assignment made
+      addCaseToTimeline(mapIcuCaseNrs, checkedDate, facilityContactId);
+      markPreviousMaxLevel(prevMaxTreatmentLevelByCaseId, ICU, facilityContactId);
     } else {
-      mapStationaryCaseNrs
-          .computeIfAbsent(checkedDate, k -> new HashSet<>())
-          .add(supplyContactEncounter.getFacilityContactId());
-      previousMaxTreatmentLevels
-          .computeIfAbsent(NORMAL_WARD, k -> new HashSet<>())
-          .add(supplyContactEncounter.getPatientId());
-      return false; // No ICU assignment
+      addCaseToTimeline(mapStationaryCaseNrs, checkedDate, facilityContactId);
+      markPreviousMaxLevel(prevMaxTreatmentLevelByCaseId, NORMAL_WARD, facilityContactId);
     }
   }
 
-  /**
-   * The Purpose of the function is to find out whether the encounter is seen as a ventilation or
-   * ecmo encounter
-   *
-   * @param previousMaxTreatmentLevels The previous maximum treatment level.
-   * @param mapIcuVentilationCaseId A map containing the case id of every ventilation case sorted by
-   *     the date.
-   * @param procedureCode The {@link UkbProcedure procedure.code.coding.code} that defines the
-   *     resource as ecmo, ventilation or other procedure.
-   * @param caseId The id of the {@link UkbEncounter} that is supposed to be checked.
-   * @param casePid The Patient id of the Patient Resource attached to the Encounter.
-   * @param checkedDate The current date that is being checked.
-   */
-  private static boolean isVent(
-      Map<TreatmentLevels, Set<String>> previousMaxTreatmentLevels,
-      Map<Long, Set<String>> mapIcuVentilationCaseId,
-      String procedureCode,
-      String caseId,
-      String casePid,
-      Long checkedDate,
-      InputCodeSettings inputCodeSettings) {
-    boolean isVent = false;
-    // check if the case would be seen as a ventilation case
-    if (inputCodeSettings.getProcedureVentilationCodes().contains(procedureCode)) {
-      isVent = true;
-      // check if the case was not already marked as an ecmo case
-      mapIcuVentilationCaseId.computeIfPresent(
-          checkedDate,
-          (k, v) -> {
-            v.add(caseId);
-            return v;
-          });
-      previousMaxTreatmentLevels.computeIfPresent(
-          ICU_VENTILATION,
-          (k, v) -> {
-            v.add(casePid);
-            return v;
-          });
-    }
-    return isVent;
+  private static void logNoValidPeriodFound(MiiEncounter supplyContactEncounter) {
+    log.warn("No valid period start found for Encounter: {}", supplyContactEncounter.getId());
+  }
+
+  /** Stores or updates the previously reached maximum treatment level for a specific case. */
+  private static void markPreviousMaxLevel(
+      Map<TreatmentLevels, Set<String>> previousMaxLevelsByCase,
+      TreatmentLevels level,
+      String caseId) {
+    previousMaxLevelsByCase.computeIfAbsent(level, _ -> ConcurrentHashMap.newKeySet()).add(caseId);
   }
 
   /**
-   * Determines whether the encounter is categorized as a ventilation or ECMO encounter based on the
-   * provided parameters.
+   * Adds a case to the timeline for a specific day.
    *
-   * @param previousMaxTreatmentLevels The map containing the previous maximum treatment level.
-   * @param mapIcuEcmoCaseId A map containing the case ID of every ECMO case sorted by date.
-   * @param procedureCode The code that defines the resource as ECMO, ventilation, or another
-   *     procedure.
-   * @param caseId The ID of the encounter to be checked.
-   * @param casePid The Patient ID of the Patient Resource attached to the Encounter.
-   * @param checkedDate The current date being checked.
-   * @return True if the encounter is categorized as an ECMO encounter, false otherwise.
+   * <p>This ensures that the given case is counted for the provided date within the corresponding
+   * treatment timeline.
    */
-  private static boolean isEcmo(
-      Map<TreatmentLevels, Set<String>> previousMaxTreatmentLevels,
-      Map<Long, Set<String>> mapIcuEcmoCaseId,
-      String procedureCode,
-      String caseId,
-      String casePid,
-      Long checkedDate,
-      InputCodeSettings inputCodeSettings) {
-    boolean isEcmo = false;
-    // Check if the procedure code matches ECMO codes
-    if (inputCodeSettings.getProcedureEcmoCodes().contains(procedureCode)) {
-      isEcmo = true;
-      // Add caseId to mapIcuEcmoCaseId for the current date
-      mapIcuEcmoCaseId.computeIfPresent(
-          checkedDate,
-          (k, v) -> {
-            v.add(caseId);
-            return v;
-          });
-      // Add casePid to previousMaxTreatmentLevels under ICU_ECMO
-      previousMaxTreatmentLevels.computeIfPresent(
-          ICU_ECMO,
-          (k, v) -> {
-            v.add(casePid);
-            return v;
-          });
-    }
-    return isEcmo;
+  private static void addCaseToTimeline(
+      Map<Long, Set<String>> timeline, long checkDate, String caseId) {
+    timeline.computeIfAbsent(checkDate, _ -> ConcurrentHashMap.newKeySet()).add(caseId);
   }
 }
